[project]
name = "mediaharvest"
version = "0.1.0"
description = "Quick video downloader for YouTube Shorts, Instagram Reels, and TikTok"
requires-python = ">=3.9,<3.13"

dependencies = [
    "gradio==4.19.2",
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "yt-dlp>=2024.10.7",
    "urllib3>=1.26.18,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "api/*.py",
]